[project]
name = "comfyui-depth-visualization"
description = "Works with any Depth Map and visualizes the applied version it inside ComfyUI"
version = "1.0.2"
license = "LICENSE"
dependencies = ["Pillow>=10.1.0"]

[project.urls]
Repository = "https://github.com/gokayfem/ComfyUI-Depth-Visualization"

[tool.comfy]
PublisherId = "gokayfem"
DisplayName = "ComfyUI-Depth-Visualization"
Icon = ""
